--- a/src/template.html
+++ b/src/template.html
@@ -316,7 +316,7 @@
                                                     <tr>
                                                         <td>
                                                             <a href="{{ data.projects[0].project_url }}">
-                                                                <img src="https://res.cloudinary.com/hpiynhbhq/image/upload/v1510052188/occhlvtqan2qafwhikbv.png" width="600" height="" alt="No Image" class="center-on-narrow" style="border: solid 1px #eeeeee; width: 100%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                                                                <img src="https://res.cloudinary.com/hpiynhbhq/image/upload/v1510150908/xx4shp2yiekby5d6sify.png" width="600" height="" alt="No Image" class="center-on-narrow" style="border: solid 1px #eeeeee; width: 100%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
                                                             </a>
                                                         </td>
                                                     </tr>
@@ -659,6 +659,99 @@
             </tr>
             <!-- Clear Spacer : END -->
 
+            <!-- Background with Text : BEGIN -->
+            <tr>
+                <td bgcolor="#252525" valign="middle" style="text-align: center; background-position: center center !important; background-size: 100% !important;">
+                    <div>
+                        <!--[if mso]>
+                        <table role="presentation" border="0" cellspacing="0" cellpadding="0" align="center" width="500">
+                            <tr>
+                                <td align="center" valign="top" width="500">
+                        <![endif]-->
+                        <table role="presentation" border="0" cellpadding="0" cellspacing="0" align="center" width="100%" style="max-width:500px; margin: auto;">
+                            <tr>
+                                <td valign="middle" style="text-align: center; padding: 40px 20px; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #ffffff;">
+                                    <h1 style="margin: 0;">TOP CONTRIBUTOIONS</h1>
+                                </td>
+                            </tr>
+                        </table>
+                        <!--[if mso]>
+                        </td>
+                        </tr>
+                        </table>
+                        <![endif]-->
+                    </div>
+                </td>
+            </tr>
+            <!-- Background with Text : END -->
+
+            <!-- Clear Spacer : BEGIN -->
+            <tr>
+                <td background="https://utopian-io.github.io/utopian-weekly/img/gradient.png" bgcolor="#252525" height="10" valign="middle" style="text-align: center; background-position: center center !important; background-size: 100% !important;"></td>
+            </tr>
+            <!-- Clear Spacer : END -->
+
+            <!-- 2 Even Columns : BEGIN -->
+            <tr>
+                <td bgcolor="#ffffff" align="center" height="100%" valign="top" width="100%">
+                    <!--[if mso]>
+                    <table role="presentation" border="0" cellspacing="0" cellpadding="0" align="center" width="660">
+                        <tr>
+                            <td align="center" valign="top" width="660">
+                    <![endif]-->
+                    <table role="presentation" border="0" cellpadding="0" cellspacing="0" align="center" width="100%" style="max-width:660px;">
+                        <tr>
+                            <td align="center" valign="top" style="font-size:0; padding: 10px 0;">
+                                <!--[if mso]>
+                                <table role="presentation" border="0" cellspacing="0" cellpadding="0" align="center" width="660">
+                                    <tr>
+                                        <td align="left" valign="top" width="330">
+                                <![endif]-->
+                                <div style="display:inline-block; margin: 0 -2px; width:100%; vertical-align:top;" class="stack-column">
+                                    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
+                                        <tr>
+                                            <td style="padding: 10px 10px;">
+                                                <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="font-size: 14px;text-align: left;">
+                                                    {% for contribution in data.contributions %}
+                                                    <tr>
+                                                        <td style="font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555; padding-top: 10px;" class="stack-column-center">
+                                                            <h3 style="margin: 0 0 5px; line-height: 25px;">
+                                                                <a href="{{ contribution.utopian_url }}">{{ contribution.title | truncate(200) }}</a><br>
+                                                                <small>by <a href="https://utopia.io/@{{ contribution.author }}">{{ contribution.author }}</a>, {{ contribution.active_votes | length }} Upvotes, {{ contribution.rewards | number_format(2) }} SBD</small>
+                                                            </h3>
+                                                        </td>
+                                                    </tr>
+                                                    {% endfor %}
+                                                </table>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </div>
+                                <!--[if mso]>
+                                </td>
+                                </tr>
+                                </table>
+                                <![endif]-->
+                            </td>
+                        </tr>
+                    </table>
+                    <!--[if mso]>
+                    </td>
+                    </tr>
+                    </table>
+                    <![endif]-->
+                </td>
+            </tr>
+            <!-- 2 Even Columns : END -->
+
+            <!-- Clear Spacer : BEGIN -->
+            <tr>
+                <td aria-hidden="true" height="20" style="font-size: 0; line-height: 0;">
+                    &nbsp;
+                </td>
+            </tr>
+            <!-- Clear Spacer : END -->
+
             <!-- 1 Column Text : BEGIN -->
             <tr>
                 <td>
@@ -693,7 +786,7 @@
                   A Special Thanks to The Sponsors<br>
                   <br>
                   {% for sponsor in data.sponsors %}
-                    <a href="https://utopian.io/@{{ sponsor }}">@{{ sponsor }}</a>{% if not loop.last %}, {% endif %}
+                    <a href="https://utopian.io/@{{ sponsor.account }}">@{{ sponsor.account }}</a>{% if not loop.last %}, {% endif %}
                   {% endfor %}
                 </td>
             </tr>
@@ -707,7 +800,7 @@
                   A Special Thanks to The Moderators<br>
                   <br>
                   {% for moderator in data.moderators %}
-                    <a href="https://utopian.io/@{{ moderator }}">@{{ moderator }}</a>{% if not loop.last %}, {% endif %}
+                    <a href="https://utopian.io/@{{ moderator.account }}">@{{ moderator.account }}</a>{% if not loop.last %}, {% endif %}
                   {% endfor %}
                 </td>
             </tr>
@@ -720,7 +813,7 @@
                 <td style="padding: 40px 10px;width: 100%;font-size: 12px; font-family: sans-serif; line-height:18px; text-align: center; color: #888888;" class="x-gmail-data-detectors">
                     Utopian.io
                     <br><br>
-                    <a href="https://utopian.io">unsubscribe</a>
+                    <a href="https://utopian.us17.list-manage.com/unsubscribe?u=e64a087978a3725e0ac97bbe8&id=0412bb3a8d">unsubscribe</a>
                 </td>
             </tr>
         </table>
