use images from ipfs

--- a/src/template.html
+++ b/src/template.html
@@ -228,7 +228,7 @@
             <!-- Hero Image, Flush : BEGIN -->
             <tr>
                 <td bgcolor="#ffffff" align="center">
-                    <img src="https://utopian-io.github.io/utopian-weekly/img/header.png" width="680" height="" alt="UTOPIAN WEEKLY" border="0" align="center" style="width: 100%; max-width: 680px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555; margin: auto;" class="fluid g-img">
+                    <img src="https://xzor.xyz/ipfs/Qmf7WhyTKb4w3VuxWyeY9dvXw9qk7XrDdyeq4c142Bhoik" width="680" height="" alt="UTOPIAN WEEKLY" border="0" align="center" style="width: 100%; max-width: 680px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555; margin: auto;" class="fluid g-img">
                 </td>
             </tr>
             <!-- Hero Image, Flush : END -->
@@ -288,7 +288,7 @@
 
             <!-- Clear Spacer : BEGIN -->
             <tr>
-                <td background="https://utopian-io.github.io/utopian-weekly/img/gradient.png" bgcolor="#252525" height="10" valign="middle" style="text-align: center; background-position: center center !important; background-size: 100% !important;"></td>
+                <td background="https://xzor.xyz/ipfs/QmUcRQhNTh3dgiXzTdz43GaQpvT4pHC984CjQBemdCMht1" bgcolor="#252525" height="10" valign="middle" style="text-align: center; background-position: center center !important; background-size: 100% !important;"></td>
             </tr>
             <!-- Clear Spacer : END -->
 
@@ -316,7 +316,7 @@
                                                     <tr>
                                                         <td>
                                                             <a href="{{ data.projects[0].project_url }}">
-                                                                <img src="https://res.cloudinary.com/hpiynhbhq/image/upload/v1510150908/xx4shp2yiekby5d6sify.png" width="600" height="" alt="No Image" class="center-on-narrow" style="border: solid 1px #eeeeee; width: 100%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                                                                <img src="https://xzor.xyz/ipfs/QmbiHGaxDXAEX5QXeFYXFbay1evG5X8piPHAMjZXjdyvbU" width="600" height="" alt="No Image" class="center-on-narrow" style="border: solid 1px #eeeeee; width: 100%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
                                                             </a>
                                                         </td>
                                                     </tr>
@@ -374,7 +374,7 @@
                                                     <tr>
                                                         <td>
                                                             <a href="{{ data.projects[1].project_url }}">
-                                                                <img src="https://res.cloudinary.com/hpiynhbhq/image/upload/v1510150908/xx4shp2yiekby5d6sify.png" width="600" height="" alt="No Image" class="center-on-narrow" style="border: solid 1px #eeeeee; width: 100%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                                                                <img src="https://xzor.xyz/ipfs/QmbiHGaxDXAEX5QXeFYXFbay1evG5X8piPHAMjZXjdyvbU" width="600" height="" alt="No Image" class="center-on-narrow" style="border: solid 1px #eeeeee; width: 100%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
                                                             </a>
                                                         </td>
                                                     </tr>
@@ -403,7 +403,7 @@
                                                   <tr>
                                                       <td>
                                                           <a href="{{ data.projects[2].project_url }}">
-                                                              <img src="https://res.cloudinary.com/hpiynhbhq/image/upload/v1510150908/xx4shp2yiekby5d6sify.png" width="600" height="" alt="No Image" class="center-on-narrow" style="border: solid 1px #eeeeee; width: 100%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                                                              <img src="https://xzor.xyz/ipfs/QmbiHGaxDXAEX5QXeFYXFbay1evG5X8piPHAMjZXjdyvbU" width="600" height="" alt="No Image" class="center-on-narrow" style="border: solid 1px #eeeeee; width: 100%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
                                                           </a>
                                                       </td>
                                                   </tr>
@@ -473,7 +473,7 @@
 
             <!-- Clear Spacer : BEGIN -->
             <tr>
-                <td background="https://utopian-io.github.io/utopian-weekly/img/gradient.png" bgcolor="#252525" height="10" valign="middle" style="text-align: center; background-position: center center !important; background-size: 100% !important;"></td>
+                <td background="https://xzor.xyz/ipfs/QmUcRQhNTh3dgiXzTdz43GaQpvT4pHC984CjQBemdCMht1" bgcolor="#252525" height="10" valign="middle" style="text-align: center; background-position: center center !important; background-size: 100% !important;"></td>
             </tr>
             <!-- Clear Spacer : END -->
 
@@ -501,7 +501,7 @@
                                                     <tr>
                                                         <td>
                                                             <a href="{{ data.newcomers[0].project_url }}">
-                                                                <img src="https://res.cloudinary.com/hpiynhbhq/image/upload/v1510150908/xx4shp2yiekby5d6sify.png" width="600" height="" alt="No Image" class="center-on-narrow" style="border: solid 1px #eeeeee; width: 100%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                                                                <img src="https://xzor.xyz/ipfs/QmbiHGaxDXAEX5QXeFYXFbay1evG5X8piPHAMjZXjdyvbU" width="600" height="" alt="No Image" class="center-on-narrow" style="border: solid 1px #eeeeee; width: 100%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
                                                             </a>
                                                         </td>
                                                     </tr>
@@ -530,7 +530,7 @@
                                                   <tr>
                                                       <td>
                                                           <a href="{{ data.newcomers[1].project_url }}">
-                                                              <img src="https://res.cloudinary.com/hpiynhbhq/image/upload/v1510150908/xx4shp2yiekby5d6sify.png" width="600" height="" alt="No Image" class="center-on-narrow" style="border: solid 1px #eeeeee; width: 100%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                                                              <img src="https://xzor.xyz/ipfs/QmbiHGaxDXAEX5QXeFYXFbay1evG5X8piPHAMjZXjdyvbU" width="600" height="" alt="No Image" class="center-on-narrow" style="border: solid 1px #eeeeee; width: 100%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
                                                           </a>
                                                       </td>
                                                   </tr>
@@ -588,7 +588,7 @@
                                                     <tr>
                                                         <td>
                                                             <a href="{{ data.newcomers[2].project_url }}">
-                                                                <img src="https://res.cloudinary.com/hpiynhbhq/image/upload/v1510150908/xx4shp2yiekby5d6sify.png" width="600" height="" alt="No Image" class="center-on-narrow" style="border: solid 1px #eeeeee; width: 100%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                                                                <img src="https://xzor.xyz/ipfs/QmbiHGaxDXAEX5QXeFYXFbay1evG5X8piPHAMjZXjdyvbU" width="600" height="" alt="No Image" class="center-on-narrow" style="border: solid 1px #eeeeee; width: 100%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
                                                             </a>
                                                         </td>
                                                     </tr>
@@ -617,7 +617,7 @@
                                                   <tr>
                                                       <td>
                                                           <a href="{{ data.newcomers[3].project_url }}">
-                                                              <img src="https://res.cloudinary.com/hpiynhbhq/image/upload/v1510150908/xx4shp2yiekby5d6sify.png" width="600" height="" alt="No Image" class="center-on-narrow" style="border: solid 1px #eeeeee; width: 100%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                                                              <img src="https://xzor.xyz/ipfs/QmbiHGaxDXAEX5QXeFYXFbay1evG5X8piPHAMjZXjdyvbU" width="600" height="" alt="No Image" class="center-on-narrow" style="border: solid 1px #eeeeee; width: 100%; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
                                                           </a>
                                                       </td>
                                                   </tr>
@@ -687,7 +687,7 @@
 
             <!-- Clear Spacer : BEGIN -->
             <tr>
-                <td background="https://utopian-io.github.io/utopian-weekly/img/gradient.png" bgcolor="#252525" height="10" valign="middle" style="text-align: center; background-position: center center !important; background-size: 100% !important;"></td>
+                <td background="https://xzor.xyz/ipfs/QmUcRQhNTh3dgiXzTdz43GaQpvT4pHC984CjQBemdCMht1" bgcolor="#252525" height="10" valign="middle" style="text-align: center; background-position: center center !important; background-size: 100% !important;"></td>
             </tr>
             <!-- Clear Spacer : END -->
 
