--- a/src/template.html
+++ b/src/template.html
@@ -782,12 +782,15 @@
         <!-- Sponsor Footer : BEGIN -->
         <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="max-width: 680px; font-family: sans-serif; color: #888888; line-height:18px;">
             <tr>
-                <td style="padding: 40px 10px;width: 100%;font-size: 11px; font-family: sans-serif; line-height:18px; text-align: center; color: #888888;" class="x-gmail-data-detectors">
-                  A Special Thanks to The Sponsors<br>
-                  <br>
-                  {% for sponsor in data.sponsors %}
-                    <a href="https://utopian.io/@{{ sponsor.account }}">@{{ sponsor.account }}</a>{% if not loop.last %}, {% endif %}
-                  {% endfor %}
+                <td style="padding: 40px 10px 0;width: 100%;font-size: 11px; font-family: sans-serif; line-height:18px; text-align: center; color: #888888;">
+                    <span style="font-size: 20px;">A Special Thanks to The Sponsors</span><br>
+                    <br>
+                    {{ specialThanks('sponsor', data.sponsors) }}
+                </td>
+            </tr>
+            <tr>
+                <td style="padding: 10px;width: 100%;font-size: 13px; font-family: sans-serif; line-height:18px; text-align: center; color: #888888;">
+                    A list of all our sponsors can be found on <a href="https://utopian.io/sponsors">utopian.io/sponsors</a>.
                 </td>
             </tr>
         </table>
@@ -796,12 +799,15 @@
         <!-- Moderator Footer : BEGIN -->
         <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="max-width: 680px; font-family: sans-serif; color: #888888; line-height:18px;">
             <tr>
-                <td style="padding: 40px 10px;width: 100%;font-size: 11px; font-family: sans-serif; line-height:18px; text-align: center; color: #888888;" class="x-gmail-data-detectors">
-                  A Special Thanks to The Moderators<br>
-                  <br>
-                  {% for moderator in data.moderators %}
-                    <a href="https://utopian.io/@{{ moderator.account }}">@{{ moderator.account }}</a>{% if not loop.last %}, {% endif %}
-                  {% endfor %}
+                <td style="padding: 40px 10px 0;width: 100%;font-size: 11px; font-family: sans-serif; line-height:18px; text-align: center; color: #888888;">
+                    <span style="font-size: 20px;">A Special Thanks to The Moderators</span><br>
+                    <br>
+                    {{ specialThanks('moderator', data.moderators) }}
+                </td>
+            </tr>
+            <tr>
+                <td style="padding: 10px;width: 100%;font-size: 13px; font-family: sans-serif; line-height:18px; text-align: center; color: #888888;">
+                    A list of all our moderators can be found on <a href="https://utopian.io/sponsors">utopian.io/moderators</a>.
                 </td>
             </tr>
         </table>
@@ -810,8 +816,8 @@
         <!-- Email Footer : BEGIN -->
         <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="max-width: 680px; font-family: sans-serif; color: #888888; line-height:18px;">
             <tr>
-                <td style="padding: 40px 10px;width: 100%;font-size: 12px; font-family: sans-serif; line-height:18px; text-align: center; color: #888888;" class="x-gmail-data-detectors">
-                    Utopian.io
+                <td style="padding: 40px 10px;width: 100%;font-size: 12px; font-family: sans-serif; line-height:18px; text-align: center; color: #888888;">
+                    Utopian Weekly by <a href="https://utopian.io">Utopian.io</a>
                     <br><br>
                     <a href="https://utopian.us17.list-manage.com/unsubscribe?u=e64a087978a3725e0ac97bbe8&id=0412bb3a8d">unsubscribe</a>
                 </td>
