move config & integrate markdown editor

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>utopian-weekly-vuejs</title>
+
+    <link href="https://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/highlight.js/9.7.0/styles/atom-one-dark.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!--<script src="/build.js"></script>-->
   </body>
 </html>
